# py_detector_interface

./: CMakeLists.txt  README.md  env.sh.in  install.sh  log  py_detector_interface_env.sh.in  py_detector_interface_install.sh
cmake/: py_detector_interfaceConfig.cmake.in  py_detector_interfaceConfigVersion.cmake.in
include/: .PhotonEntry.hh.swo  ChargeEntry.hh  ChargeMatrix.hh  ChargeSim.hh  Constants.hh  InteractionData.hh  InteractionEntry.hh  ParticleSim.hh  PhotonData.hh  PhotonEntry.hh
src/: .ChargeMatrix.cc.swp  .ChargeSim_ext.cc.swp  CMakeLists.txt  ChargeEntry.cc  ChargeEntry_ext.cc  ChargeMatrix.cc  ChargeMatrix_ext.cc  ChargeSim.cc  ChargeSim_ext.cc  Constants.cc  InteractionData.cc  InteractionData_ext.cc  InteractionEntry.cc  InteractionEntry_ext.cc  ParticleSim.cc  ParticleSim_ext.cc  PhotonData.cc  PhotonData_ext.cc  PhotonEntry.cc  PhotonEntry_ext.cc  XCSITPhotonDetector.py  XChargeMatrix_ext.cc  pythonExtension.cc
test/: ChargeEntryTest.py  ChargeMatrixTest.py  ChargeSimTest.py  InteractionDataTest.py  InteractionEntryTest.py  ParticleSimTest.py  PhotonDataTest.py  PhotonEntryTest.py
